[gd_scene load_steps=18 format=3 uid="uid://trqe16na7c6n"]

[ext_resource type="Script" uid="uid://bsor0m08akrft" path="res://combat/grid.gd" id="1_80nbo"]
[ext_resource type="PackedScene" uid="uid://dj81viqtup7xf" path="res://ui/unit_display.tscn" id="1_eow3j"]
[ext_resource type="PackedScene" uid="uid://cgt08rla3nihh" path="res://combat/unit.tscn" id="2_e2o6t"]
[ext_resource type="Resource" uid="uid://cf7s8u0wiech5" path="res://unit_data/test_unit.tres" id="3_feb5d"]
[ext_resource type="Script" uid="uid://b7g2367t5hxt7" path="res://combat/combat_manager.gd" id="4_fc0e3"]
[ext_resource type="Texture2D" uid="uid://gf56hfundv6c" path="res://textures/selected_circle.webp" id="5_7jktm"]
[ext_resource type="Script" uid="uid://bh6vqbbe72shu" path="res://preferences/preference.gd" id="5_mfdv2"]
[ext_resource type="Script" uid="uid://cw3ohthqkqyn7" path="res://preferences/adjacency_preference.gd" id="6_iotsf"]
[ext_resource type="Script" uid="uid://b60f4cmajugr7" path="res://selected_circle.gd" id="6_ryrav"]
[ext_resource type="Script" uid="uid://c1xsiv7lgwjs8" path="res://dialogue/dialogue_manager.gd" id="8_j5wjh"]
[ext_resource type="PackedScene" uid="uid://cl3g7x27e5sbe" path="res://dialogue/dialogue_popup.tscn" id="9_vef74"]

[sub_resource type="Resource" id="Resource_mfdv2"]
script = ExtResource("6_iotsf")
tag = "elf"
wants_to_be_next_to = false
metadata/_custom_type_script = "uid://cw3ohthqkqyn7"

[sub_resource type="AtlasTexture" id="AtlasTexture_ryrav"]
atlas = ExtResource("5_7jktm")
region = Rect2(0, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_eow3j"]
atlas = ExtResource("5_7jktm")
region = Rect2(500, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5wjh"]
atlas = ExtResource("5_7jktm")
region = Rect2(1000, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_vef74"]
atlas = ExtResource("5_7jktm")
region = Rect2(1500, 0, 500, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_hve3p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryrav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eow3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5wjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vef74")
}],
"loop": true,
"name": &"rotation",
"speed": 10.0
}]

[node name="Root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 300.0
grow_horizontal = 2

[node name="Panel" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="UnitDisplay" parent="UI/Panel" instance=ExtResource("1_eow3j")]
layout_mode = 1
offset_top = 23.0
offset_right = 1026.0
offset_bottom = -21.0

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.202551, 0.382068, 0.231599, 1)

[node name="MainGrid" type="Node2D" parent="." node_paths=PackedStringArray("combat_manager")]
position = Vector2(548, 432)
script = ExtResource("1_80nbo")
grid_size = Vector2i(12, 12)
cell_size = Vector2(64, 48)
combat_manager = NodePath("../CombatManager")
metadata/_custom_type_script = "uid://bsor0m08akrft"

[node name="Unit" parent="MainGrid" node_paths=PackedStringArray("grid", "roster") instance=ExtResource("2_e2o6t")]
modulate = Color(0.671618, 0.507209, 3.85046e-07, 1)
position = Vector2(138, 143)
unit_name = "Johann"
unit = ExtResource("3_feb5d")
is_player_commander = true
grid = NodePath("..")
roster = NodePath("../../Roster")

[node name="Unit2" parent="MainGrid" node_paths=PackedStringArray("grid", "roster") instance=ExtResource("2_e2o6t")]
position = Vector2(563, 35)
unit_name = "Jaqueline"
unit = ExtResource("3_feb5d")
is_player_unit = false
grid = NodePath("..")
roster = NodePath("../../Roster")

[node name="Unit3" parent="MainGrid" node_paths=PackedStringArray("grid", "roster") instance=ExtResource("2_e2o6t")]
position = Vector2(218, 235)
unit_name = "Kevin"
unit = ExtResource("3_feb5d")
preferences = Array[ExtResource("5_mfdv2")]([SubResource("Resource_mfdv2")])
grid = NodePath("..")
roster = NodePath("../../Roster")

[node name="Unit4" parent="MainGrid" node_paths=PackedStringArray("grid", "roster") instance=ExtResource("2_e2o6t")]
position = Vector2(149, 311)
unit_name = "Morg"
unit = ExtResource("3_feb5d")
tags = Array[String](["elf"])
grid = NodePath("..")
roster = NodePath("../../Roster")

[node name="Unit5" parent="MainGrid" node_paths=PackedStringArray("grid", "roster") instance=ExtResource("2_e2o6t")]
position = Vector2(732, 253)
unit_name = "Helga"
unit = ExtResource("3_feb5d")
is_player_unit = false
grid = NodePath("..")
roster = NodePath("../../Roster")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 424.0
offset_right = 230.0
offset_bottom = 479.0
text = "start combat"

[node name="CombatManager" type="Node" parent="." node_paths=PackedStringArray("grid", "selected_circle", "unit_display", "dialogue_manager")]
script = ExtResource("4_fc0e3")
grid = NodePath("../MainGrid")
selected_circle = NodePath("../SelectedCircle")
unit_display = NodePath("../UI/Panel/UnitDisplay")
dialogue_manager = NodePath("../DialogueManager")
metadata/_custom_type_script = "uid://b7g2367t5hxt7"

[node name="SelectedCircle" type="AnimatedSprite2D" parent="."]
z_index = -1
position = Vector2(544, 445)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_hve3p")
animation = &"rotation"
autoplay = "rotation"
offset = Vector2(0, -220)
script = ExtResource("6_ryrav")

[node name="Roster" type="Node2D" parent="."]
position = Vector2(39, 703)
script = ExtResource("1_80nbo")
grid_size = Vector2i(5, 5)
metadata/_custom_type_script = "uid://bsor0m08akrft"

[node name="DialogueManager" type="Node" parent="."]
script = ExtResource("8_j5wjh")
dialogue_popup = ExtResource("9_vef74")

[connection signal="pressed" from="Button" to="CombatManager" method="play_combat"]
